crates/monty/tests/heap_reader_compile_fail_cases/heap_mutation_while_reading.stderr
error[E0502]: cannot borrow `*heap` as mutable because it is also borrowed as immutable
  --> crates/monty/src/../tests/heap_reader_compile_fail_cases/cases.rs:31:9
   |
30 |         let slice = a.get(heap).as_slice();
   |                           ---- immutable borrow occurs here
31 |         heap.dec_ref(list_id);
   |         ^^^^^^^^^^^^^^^^^^^^^ mutable borrow occurs here
32 |         let _ = slice.len();
   |                 ----- immutable borrow later used here
For more information about this error, try `rustc --explain E0502`.
